# Toledo

./: Cargo.toml  README.md
src/: main.rs  reader.rs
src/lang/: en.toml  pt.toml
src/message/: mod.rs
src/message/lang/: pt.toml
src/protocol/: mod.rs  toledo.rs
src/reader/: file.rs  mod.rs  serial.rs
tests/: data.txt  erro.txt  mov.txt  over.txt  pesagem.txt  tara_neg.txt  tara_pos.txt  test01.hurl  zero.txt
tests/en/: basic.hurl  max_tare.hurl  max_weight.hurl  min_tare.hurl  min_weight.hurl  unit_lb.hurl
tests/pt/: basic.hurl  max_tare.hurl  max_weight.hurl  min_tare.hurl  min_weight.hurl  unit_lb.hurl
