[package]
name = "toledo"
version = "0.1.1"
edition = "2021"
authors = ["Marco Di Pillo Tomic <marcodpt@protonmail.com>"]
license = "MIT"
description = "An IOT server written in rust for connecting via serial port to toledo scales."
readme = "README.md"
homepage = "https://github.com/marcodpt/toledo"
repository = "https://github.com/marcodpt/toledo"
keywords = [
  "iot",
  "serialport",
  "server",
  "scale",
  "toledo"
]
categories = ["hardware-support"]

[dependencies]
ascii_converter = "0"
serialport = "4"
tiny_http = "0"
toml = "0"
serde_json = "1"
clap = {version = "4", features = ["derive"]}

[profile.release]
opt-level = 3
