[package]
name = "serialscale"
version = "0.1.2"
edition = "2021"
authors = ["Marco Di Pillo Tomic <marcodpt@protonmail.com>"]
license = "MIT"
description = "An IOT server written in rust for reading weighing data on scales via serial port"
readme = "README.md"
homepage = "https://github.com/marcodpt/serialscale"
repository = "https://github.com/marcodpt/serialscale"
keywords = [
  "iot",
  "serialport",
  "server",
  "scale",
  "toledo"
]
categories = ["hardware-support"]

[dependencies]
ascii_converter = "0"
serialport = "4"
tiny_http = "0"
toml = "0"
serde = {version = "1", features = ["derive"]}
serde_json = "1"
clap = {version = "4", features = ["derive"]}

[profile.release]
opt-level = 3
